# dz-highrise-djbot-py

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
config/: config.test.yaml  config.yaml  config2.yaml
src/dz_highrise_bot/: __init__.py  __main__.py  actions.py  bot.py  commands.py  config.py  desizone.py  firebase_service.py  formatters.py  legacy_outfits.py  linear_reporter.py  logging_config.py  notifications.py
tests/: test_actions.py  test_bot.py  test_commands.py  test_config.py  test_desizone.py  test_formatters.py
